kubernetes/infrastructure/forgejo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
  namespace: forgejo
spec:
  parentRefs:
    - name: external-gateway
      namespace: kube-system
      sectionName: https-domain1
    - name: external-gateway
      namespace: kube-system
      sectionName: http-domain1
  hostnames:
    - "forgejo.${DOMAIN1}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: forgejo-http
          port: 3000
